--- a/chart_08_slider copy 2/index.html
+++ b/chart_08_slider copy 2/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 08 - slider</title>
+    <title>Perfiles de astronautas</title>
     <style>
       #chart {
         overflow-y: auto;
@@ -25,12 +25,61 @@
       .legend-title {
         margin-right: 10px;
       }
+      p {
+        font-family: Arial;
+        font-size:12px;
+      }
+      li {
+        font-family: Arial;
+        font-size:12px;
+      }
+      h1 {
+        font-family: Arial;
+        box-sizing: content-box; /* por default */
+        width: 580px;
+        padding: 6px;
+        border: 5px outset;
+        margin: 5px;
+      }
+      h5{
+        font-family: Arial;
+        font-style:none;
+        font-size:12px;
+      }
+      #chart{
+        box-sizing: content-box; /* por default */
+        width: 580px;
+        padding: 5px;
+        border: 4px outset;
+        margin: 5px;
+      }
+      #cuerpo{
+        box-sizing: content-box; /* por default */
+        width: 580px;
+        padding: 5px;
+        border: 2px outset;
+        margin: 5px;
+      }
+
     </style>
   </head>
   <body>
+    <h1>Perfiles de astronautas</h1>
+    <div id = "cuerpo">
+      <p>Se presenta un peril de cada astronauta basandose en los siguientes datos: <br></p>
+      <ul>
+        <li>nacionalidad</li>
+        <li>genero</li>
+        <li>edad al realizar la mision</li>
+        <li>horas de mision </li>
+        <li>nombre </li>
+      </ul>
+    <p>Ademas se ordena la siguiente informacion dependiendo del año en el cual las misiones fueron realizadas.</p>
+    </div>
+    
     <div id="chart"></div>
     <div id="selector">
-      <p>Seleccione año:</p>
+      <h5>Seleccione año:</h5>
       <input type="range" min="2010" max="2019" step="1" value="2010" id="input" />
       <p id="value-input"></p>
     </div>
