--- a/chart_15_marks_a copy/index.html
+++ b/chart_15_marks_a copy/index.html
@@ -7,26 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horas de mision por año</title>
     <style>
-      #chart {
-        overflow-y: auto;
-      }
-      #chart svg {
-        max-width: initial;
-      }
-      p {
-        font-family: Arial;
-        text-decoration: none;
-        font-size:12px;
-      }
-      h1 {
-        font-family: Arial;} 
-      body{
-        box-sizing: content-box; /* por default */
-        width: 645px;
-        padding: 20px;
-        border: 0px double;
-        margin: 10px;
-      }
+      
     </style>
   </head>
   <body>
@@ -34,7 +15,7 @@
     <p>El grafico muestra para cada año entre 2010 y 2019 la suma de horas de todas las misiones que se llevaron a cabo dicho año. Se muestran ademas cuantas de estas horas corresponden a misiones realizadas por Estados Unidos y cuantas por Rusia.
     </p>
     <div id="chart"></div>
-    <div id="total"> TOTAL</div> 
+    <div id="total"> MUNDIAL</div> 
     <div id="usa"> EE.UU. </div> 
     <div id="Rusia"> RUSIA</div> 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
