--- a/chart_15_marks_a copy/index.html
+++ b/chart_15_marks_a copy/index.html
@@ -18,6 +18,9 @@
     <div id="total"> MUNDIAL</div> 
     <div id="usa"> EE.UU. </div> 
     <div id="Rusia"> RUSIA</div> 
+    <div id="anio">2016</div>
+    <div id="maximo">maximo</div>
+    <div id = "flecha"> ______</div>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
