--- a/chart_08_slider copy 2/index.html
+++ b/chart_08_slider copy 2/index.html
@@ -1,67 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> 
+    <link rel="stylesheet" href="estilos.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfiles de astronautas</title>
-    <style>
-      #chart {
-        overflow-y: auto;
-      }
-      #chart svg {
-        max-width: initial;
-      }
-      #input {
-        width: 250px;
-      }
-      #selector {
-        display: flex;
-      }
-      #selector p {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 12px;
-      }
-      .legend-title {
-        margin-right: 10px;
-      }
-      p {
-        font-family: Arial;
-        font-size:12px;
-      }
-      li {
-        font-family: Arial;
-        font-size:12px;
-      }
-      h1 {
-        font-family: Arial;
-        box-sizing: content-box; /* por default */
-        width: 580px;
-        padding: 6px;
-        border: 5px outset;
-        margin: 5px;
-      }
-      h5{
-        font-family: Arial;
-        font-style:none;
-        font-size:12px;
-      }
-      #chart{
-        box-sizing: content-box; /* por default */
-        width: 580px;
-        padding: 5px;
-        border: 4px outset;
-        margin: 5px;
-      }
-      #cuerpo{
-        box-sizing: content-box; /* por default */
-        width: 580px;
-        padding: 5px;
-        border: 2px outset;
-        margin: 5px;
-      }
-
-    </style>
   </head>
   <body>
     <h1>Perfiles de astronautas</h1>
