--- a/chart_08_slider copy 2/index.html
+++ b/chart_08_slider copy 2/index.html
@@ -27,7 +27,8 @@
       <input type="range" min="2010" max="2019" step="1" value="2010" id="input" />
       <p id="value-input"></p>
     </div>
-    <h6>Fuente</h6>
+
+    <div id="fuente"><h6>Fuente</h6></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
