--- a/chart_08_slider copy 2/index.html
+++ b/chart_08_slider copy 2/index.html
@@ -15,7 +15,7 @@
         <li>nacionalidad</li>
         <li>genero</li>
         <li>edad al realizar la mision</li>
-        <li>horas de mision </li>
+        <li>horas de mision (tamaño del circulo)</li>
         <li>nombre </li>
       </ul>
     <p>Ademas se ordena la siguiente informacion dependiendo del año en el cual las misiones fueron realizadas.</p>
