--- a/chart_08_slider copy 2/index.html
+++ b/chart_08_slider copy 2/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Perfiles de astronautas</h1>
+    <a href="pagina_principal.html">Home</a>
     <div id = "cuerpo">
       <p>Se presenta un peril de cada astronauta basandose en los siguientes datos: <br></p>
       <ul>
