--- a/chart_15_marks_a copy/index.html
+++ b/chart_15_marks_a copy/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1> Horas de mision por año</h1>
+    <a href="../pagina_principal.html">Home</a>
     <p>El grafico muestra para cada año entre 2010 y 2019 la suma de horas de todas las misiones que se llevaron a cabo dicho año. Se muestran ademas cuantas de estas horas corresponden a misiones realizadas por Estados Unidos y cuantas por Rusia.
     </p>
     <div id="chart"></div>
