--- a/paula1/index.html
+++ b/paula1/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1 id="titulo_1">Cantidad de astronautas por ocupacion</h1>
-    <a href="pagina_principal.html">Home</a>
+    <a href="../pagina_principal.html">Home</a>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
