--- a/chart_15_marks_a copy/index.html
+++ b/chart_15_marks_a copy/index.html
@@ -11,21 +11,22 @@
     </style>
   </head>
   <body>
-    <h1> Horas de mision por año</h1>
-    <a href="../pagina_principal.html">Home</a>
-    <p>El grafico muestra para cada año entre 2010 y 2019 la suma de horas de todas las misiones que se llevaron a cabo dicho año. Se muestran ademas cuantas de estas horas corresponden a misiones realizadas por Estados Unidos y cuantas por Rusia.
-    </p>
-    <div id="chart"></div>
-    <div id="total"> MUNDIAL</div> 
-    <div id="usa"> EE.UU. </div> 
-    <div id="Rusia"> RUSIA</div> 
-    <div id="anio">2016</div>
-    <div id="maximo">maximo</div>
-    <div id = "flecha"> ______</div>
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
-    <script src="script.js"></script>
-    <div id="fuente"><h6>Fuente</h6></div>
+    <div id="todo">
+      <a href="../pagina_principal.html">Home</a>
+      <h1> Horas de mision por año</h1>
+      <p>El grafico muestra para cada año entre 2010 y 2019 la suma de horas de todas las misiones que se llevaron a cabo dicho año. Se muestran ademas cuantas de estas horas corresponden a misiones realizadas por Estados Unidos y cuantas por Rusia.
+      </p>
+      <div id="chart"></div>
+      <div id="total"> MUNDIAL</div> 
+      <div id="usa"> EE.UU. </div> 
+      <div id="Rusia"> RUSIA</div> 
+      <div id="anio">2016</div>
+      <div id="maximo">maximo</div>
+      <div id = "flecha"> ______</div>
+      <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
