--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<h1>Astronautas</h1>
+	<h1>Astronauta</h1>
 	<ul>
 		
 			<a href="chart_08_slider copy 2/index.html">Perfiles de astronautas</a>
