--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-	<link rel="stylesheet" href="estilos.css">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Astronautas</title>
+  <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Astronautas</title>
 </head>
-
 <body>
-	<h1>Astronautas</h1>
-	<div class="img-container">
-		<img src="https://openailabsprodscus.blob.core.windows.net/private/user-ACPN23yAILl4jxeigVSNxQti/generations/generation-5nlcOM1ppxIMX2UGfG6yOEu4/image.webp?st=2023-04-02T00%3A21%3A23Z&amp;se=2023-04-02T02%3A19%3A23Z&amp;sp=r&amp;sv=2021-08-06&amp;sr=b&amp;rscd=inline&amp;rsct=image/webp&amp;skoid=15f0b47b-a152-4599-9e98-9cb4a58269f8&amp;sktid=a48cca56-e6da-484e-a814-9c849652bcb3&amp;skt=2023-04-01T23%3A38%3A10Z&amp;ske=2023-04-08T23%3A38%3A10Z&amp;sks=b&amp;skv=2021-08-06&amp;sig=hSM6EfJ23EZ71PauAJ%2BFvSFtZ/v/LFqNizAgu3ttmNs%3D" style="width: 50%;">
-		<a href="chart_08_slider copy 2/index.html">Perfiles de astronautas</a>
-	</div>
-	<div class="text-container">
-		<a href="chart_08_slider copy 2/index.html">Perfiles de astronautas</a>
-	  </div>
-	  
-	<ul>
-		
-			<a href="chart_08_slider copy 2/index.html">Perfiles de astronautas</a>
-			<p></p>
-			<a href="chart_15_marks_a copy/index.html">Horas de mision por año</a>
-			<p></p>
-			<a href="paula1/index.html">Cantidad de astronautas por ocupacion</a>
-	</ul>
-</body>
+  <h1>Astronautas</h1>
+  
+  <div class="img-container">
+    <img src="manu.png" style="width: 45%;">
+    <a href="chart_08_slider copy 2/index.html" class="link-img">Perfiles de astronautas</a>
+  </div>
 
+  <div class="img-containerD">
+    <a href="chart_15_marks_a copy/index.html" class="link-imgD">Horas de misión por año</a>
+	<img src="reloj.png" style="width: 45%;">
+  </div>
+
+  <div class="img-container">
+    <img src="astros.png" style="width: 45%;">
+    <a href="paula1/index.html" class="link-img">Cantidad de astronautas por ocupación</a>
+  </div>
+  <h5>Integrantes: Valentina Pancaldi y Paula Jordan</h5>
+
+</body>
 </html>
