--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -12,17 +12,17 @@
   
   <div class="img-container">
     <img src="manu.png" style="width: 45%;">
-    <a href="chart_08_slider copy 2/index.html" class="link-img">Perfiles de astronautas</a>
+    <a href="dataviz_1/index.html" class="link-img">Perfiles de astronautas</a>
   </div>
 
   <div class="img-containerD">
-    <a href="chart_15_marks_a copy/index.html" class="link-imgD">Horas de misión por año</a>
+    <a href="dataviz_2/index.html" class="link-imgD">Horas de misión por año</a>
 	<img src="reloj.png" style="width: 45%;">
   </div>
 
   <div class="img-container">
     <img src="astros.png" style="width: 45%;">
-    <a href="paula1/index.html" class="link-img">Cantidad de astronautas por ocupación</a>
+    <a href="dataviz_3/index.html" class="link-img">Cantidad de astronautas por ocupación</a>
   </div>
   <h5>Integrantes: Valentina Pancaldi y Paula Jordan</h5>
 
