--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -12,6 +12,7 @@
   <body>
     <a href="../pagina_principal.html">Home</a>
     <h1 id="titulo_1">Cantidad de astronautas por ocupacion</h1>
+    <p> El gráfico exhibe la cantidad de astronautas en función de su ocupación</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
