--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -22,8 +22,14 @@
 
   <div class="img-container">
     <img src="astros.png" style="width: 45%;">
-    <a href="dataviz_3/index.html" class="link-img">Cantidad de astronautas por ocupación</a>
+    <a href="dataviz_3/index.html" class="link-img">Ocupación</a>
   </div>
+
+  <div class="img-containerD">
+    <a href="dataviz_4/index.html" class="link-imgD">Nacionalidad</a>
+	<img src="reloj.png" style="width: 45%;">
+  </div>
+
   <h5>Integrantes: Valentina Pancaldi y Paula Jordan</h5>
 
 </body>
