--- a/dataviz_4/index.html
+++ b/dataviz_4/index.html
@@ -12,6 +12,7 @@
     
   </head>
   <body>
+    <a href="../pagina_principal.html">Home</a>
     <h1 id="titulo_1">Astronautas por nacionalidad</h1>
     <div id="chart"></div>
 
