--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -17,7 +17,7 @@
 
   <div class="img-containerD">
     <a href="dataviz_2/index.html" class="link-imgD">Horas de misión por año</a>
-	<img src="reloj.png" style="width: 45%;">
+    <img  src="reloj.png" style="width: 45%;">
   </div>
 
   <div class="img-container">
@@ -27,7 +27,7 @@
 
   <div class="img-containerD">
     <a href="dataviz_4/index.html" class="link-imgD">Nacionalidad</a>
-	<img src="reloj.png" style="width: 45%;">
+	<img src="luna.png" style="width: 45%;">
   </div>
 
   <h5>Integrantes: Valentina Pancaldi y Paula Jordan</h5>
