--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -28,6 +28,9 @@
       <input type="range" min="2010" max="2019" step="1" value="2010" id="input" />
       <p id="value-input"></p>
     </div>
+    <a href="https://github.com/valenpancaldi/vd_s1_tp2_Pancaldi_Jordan/blob/main/dataviz_1/astronautas.csv" class="my-link">Fuente</a>
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
