--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -19,5 +19,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
     <script type="module" src="script.js"></script>
+    <a href="https://github.com/valenpancaldi/vd_s1_tp2_Pancaldi_Jordan/blob/main/dataviz_1/astronautas.csv" class="my-link">Fuente</a>
   </body>
 </html>
