--- a/Grafico_2.js/index.html
+++ b/Grafico_2.js/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <h1 id="titulo_1">Astronautas por nacionalidad</h1>
+    <p>
+      El gráfico presenta la cantidad de astronautas provenientes de cada país indicado
+    </p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
