--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -16,11 +16,18 @@
         <li>nacionalidad</li>
         <li>genero</li>
         <li>edad al realizar la mision</li>
-        <li>horas de mision (tamaño del circulo)</li>
+        <li>horas de mision </li>
         <li>nombre </li>
       </ul>
     <p>Ademas se ordena la siguiente informacion dependiendo del año en el cual las misiones fueron realizadas.</p>
     </div>
+    <h3>Horas de mision</h3>
+    <div class="container">
+      <div class="circle circle1"></div>
+      <div class="circle circle2"></div>
+      <div class="circle circle3"></div>
+    </div>
+    <div id="flecha"><img  src="flecha.png"></div>
     
     <div id="chart"></div>
     <div id="selector">
@@ -28,7 +35,7 @@
       <input type="range" min="2010" max="2019" step="1" value="2010" id="input" />
       <p id="value-input"></p>
     </div>
-    <a href="https://github.com/valenpancaldi/vd_s1_tp2_Pancaldi_Jordan/blob/main/dataviz_1/astronautas.csv" class="my-link">Fuente</a>
+   
 
     
 
