--- a/dataviz_4/index.html
+++ b/dataviz_4/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1 id="titulo_1">Astronautas por nacionalidad</h1>
     <p>
-      El gráfico presenta la cantidad de astronautas provenientes de cada país indicado
+      El gráfico presenta la cantidad de astronautas provenientes de cada país indicado.
     </p>
     <div id="chart"></div>
 
