--- a/dataviz_4/index.html
+++ b/dataviz_4/index.html
@@ -18,6 +18,8 @@
       El gráfico presenta la cantidad de astronautas provenientes de cada país indicado.
     </p>
     <div id="chart"></div>
+    <div id="EEUU">73</div>
+  
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
