--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -8,7 +8,7 @@
     <title>Perfiles de astronautas</title>
   </head>
   <body>
-    <a href="../pagina_principal.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Perfiles de astronautas</h1>
     <div id = "cuerpo">
       <p>Se presenta un peril de cada astronauta basandose en los siguientes datos: <br></p>
