--- a/dataviz_2/index.html
+++ b/dataviz_2/index.html
@@ -10,7 +10,7 @@
   <body>
     
     
-      <a href="../pagina_principal.html">Home</a>
+      <a href="../index.html">Home</a>
       <h1> Horas de mision por año</h1>
       <p>El grafico muestra para cada año entre 2010 y 2019 la suma de horas de todas las misiones que se llevaron a cabo dicho año. Se muestran ademas cuantas de estas horas corresponden a misiones realizadas por Estados Unidos y cuantas por Rusia.
       </p>
