--- a/dataviz_4/index.html
+++ b/dataviz_4/index.html
@@ -12,7 +12,7 @@
     
   </head>
   <body>
-    <a href="../pagina_principal.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1 id="titulo_1">Astronautas por nacionalidad</h1>
     <p>
       El gráfico presenta la cantidad de astronautas provenientes de cada país indicado.
