--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -10,7 +10,7 @@
     
   </head>
   <body>
-    <a href="../pagina_principal.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1 id="titulo_1">Cantidad de astronautas por ocupacion</h1>
     <p> El gráfico exhibe la cantidad de astronautas en función de su ocupación</p>
     <div id="chart"></div>
